--- a/recipe-manager-app/src/components/Recipes/Recipes.module.css
+++ b/recipe-manager-app/src/components/Recipes/Recipes.module.css
@@ -6,6 +6,8 @@
   column-gap: 2rem;
   grid-template-columns: repeat(4, 1fr);
   font-size: 1.8rem;
+  /* background-color: blue; */
+  max-height: 57rem
 }
 
 .footerTrash {
