--- a/recipe-manager-app/src/index.css
+++ b/recipe-manager-app/src/index.css
@@ -203,3 +203,18 @@ header, span, h1, h2, p {
 .yellow-lighter {
   background-color: var(--color-yellow-light-60);
 }
+
+/* SCROLL BAR */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+}
